# Apollo11

./: .gitignore  .handoff.md  AGENTS.md  README.md  SPEC.md  Tiltfile  apollo-airlines-spec-v1.1.md  devbox.json  docker-compose.yaml  grpc.md  handoff.md  k8s-plan.md  k8s-snippets.md  loki-grafana.md  mkdocs.yml  personal_learning_path.md  prep.sh  provider-config.yaml
.github/workflows/: codeql-analysis.yml  main.yml
.hermes/plans/: 2026-06-02_apollo11-rebuild-plan.md  2026-06-03_apollo11-resumption-plan.md  stage3.md
AWS/: EKS.md  kubers.yaml  links.md
apollo11/: Dockerfile  mkdocs.yml  pyproject.toml
apollo11/docs/: index.md
appln-arch-fundamentals/: index.md
archived/code/booking/: go.mod  go.sum
archived/code/movie/: requirements.txt
archived/code/theatre/: main.go
archived/v1/: Tiltfile
backend/: go.mod  go.sum  main.go  main_test.go
cloud-design-patterns/: index.md
code/: README.md  UV_SETUP.md  compose.yml  docker-compose.yml  env.example  init-db.sql
code/admin-dashboard/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
code/booking/: create.sql  go.mod  go.sum  main.go
code/command-dispatcher/: main.py
code/core-api/: Dockerfile  go.mod  go.sum  main.go
code/core-api/app/: auth.py  main.py
code/dashboard/: Dockerfile  go.mod  go.sum  main.go
code/dashboard/templates/: index.html  telemetry.html
code/database/migrations/: 001_init.up.sql
code/docker/: compose.yml  notes.md
code/docker/portal/: nginx.conf  package-lock.json
code/docker/quiz-service/: go.mod
code/frontend/: Dockerfile  README.md  database.py  main.py  pyproject.toml  requirements.txt
code/frontend/templates/: base.html  dashboard.html  index.html  login.html  register.html  stage.html
code/k8s/: 00-namespaces.yaml  01-postgres.yaml  02-keycloak.yaml  03-core-api.yaml  04-quiz-service.yaml  05-portal.yaml  06-admin-dashboard.yaml  07-ingress.yaml  README.md  admin-dashboard.yaml  core-api.yaml  frontend.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  redis.yaml  simulator.yaml
code/k8s/core-api/: requirements.txt
code/k8s/payment-api/: go.mod
code/k8s/portal/: nginx.conf  package-lock.json  package.json
code/k8s/quiz-service/: go.mod
code/lunar/: Dockerfile  docker-compose.yml  go.mod  init.sql  main.go
code/movie/: requirements.txt
code/movie/app/: main.py
code/payment/app/: db.py  main.py
code/portal/: package-lock.json  package.json
code/portal/src/: App.tsx
code/pushmetric/: Dockerfile  main.py  requirements.txt
code/scripts/: deploy.sh
code/shared/: README.md  __init__.py  pyproject.toml  schemas.py
code/simulator/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
code/telemetry/: init.sql  main.py
code/theatre/: go.mod  go.sum  main.go
code/theatre/fiberprometheus/: middleware.go
code/timeline/: Dockerfile  go.mod  init-mongo.js  main.go
code_v2/: docker-compose.yml  readme.md
code_v2/admin-dashboard/: Dockerfile  app.py  pyproject.toml
code_v2/core-api/: Dockerfile  go.mod  go.sum  main.go
code_v2/frontend/: Dockerfile  main.py  pyproject.toml
code_v2/frontend/static/: style.css
code_v2/frontend/templates/: base.html  dashboard.html  login.html  register.html  stage.html
code_v2/k8s/: 01-db-redis.yaml  02-backend.yaml  03-frontend.yaml
code_v2/simulator/: Dockerfile  main.py  pyproject.toml
crossplane/: guides.md  s3.yaml
dashboard/: main.go
dashboard/templates/: booking.html
docs/: index.md
docs/accio/: readme.md
docs/images/draw.io/: apolo11-flavor2.drawio
flutter/: README.md  pubspec.yaml
flutter/android/app/: build.gradle
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/lib/pages/: home_page.dart
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
frontend/fact-list-app/: package-lock.json  package.json
frontend/fact-list-app/src/: App.css  App.js
images/: apolo11.drawio
images/draw.io/: apolo11-flavor2.drawio
prompts/: codebootstrap.md
scripts/: setup_script.sh
stage-1/go-learning/app/: app.go
stage-2/: stage-2.md
stage-2/databases/: docker-compose.yml  requirements.txt
stage-2/farm-stack/: steps.md
stage-2/frontend/next-js/: package-lock.json  package.json
stage-2/k8s/deployments/: deployment.yml
stage-2/k8s/test-api/: steps.md
stage-2/rest-api/python/: docker-compose.yml  steps.md
stage-4/cdk/: cdk.json  notes.md  requirements.txt  setup.py
stage-4/cdk/cdk/: cdk_stack.py
stage-4/pulumi/: Pulumi.yaml
stages/eks/: README.md
stages/eks/scripts/: apply-workloads.sh  down.sh  ebs-sweep.sh  up.sh  verify.sh
stages/eks/terraform/: backend.tf  ecr.tf  locals.tf  outputs.tf  providers.tf  variables.tf  versions.tf
stages/ignition/: README.md  kind-config-single.yaml  kind-config.yaml  pod.yaml
stages/launchpad/: README.md  docker-compose.yml
stages/liftoff/: README.md  docker-compose.yml
stages/mars/k8shardway/: steps.md
stages/stage-1/kind-config/: kind-config.yaml
stages/stage-2/databases/: requirements.txt
stages/stage-3/loki/: loki-configmap.yaml  loki-deployment.yaml  loki-service.yaml
stages/stage-3/promtail/: promtail-configmap.yaml
stages/stage-5/grafana/: grafana-configmap.yaml  grafana-deployment.yaml  grafana-pvc.yaml
stages/stage-5/loki/: loki-pvc.yaml
stages/stage-5/prometheus/: prometheus-cm.yaml
stages/stage-5/pushmetric/: pushmetric-cronjob.yaml
stages/stage1/: README.md  k3d-config.yaml
stages/stage1/k8s/: auth-init-configmap.yaml  auth-postgres-svc.yaml  auth-svc.yaml  catalog-init-configmap.yaml  catalog-postgres-svc.yaml  catalog-redis-dep.yaml  catalog-svc.yaml  circulation-postgres-svc.yaml  circulation-svc.yaml  configmap.yaml  frontend-dep.yaml  init-circulation-db.yaml  kustomization.yaml  (+4 more)
stages/stage11/: docker-compose.yaml
stages/stage2/: NOTES.md  README.md
stages/stage3/: README.md
stages/stage4/: README.md
stages/stage5/: README.md
stages/stage6/: README.md
stages/stage7/: .handoff.md  README.md
test/: stage1_test.sh  stage2_test.sh
(+1060 files in other folders)
