[project]
name = "admin-dashboard"
version = "0.1.0"
description = "Apollo 11 Admin Dashboard"
dependencies = [
    "streamlit>=1.24.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "plotly>=5.15.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
