[project]
name = "frontend"
version = "0.1.0"
description = "Apollo 11 Frontend"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.2",
    "httpx>=0.24.1",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
